api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
