api-ingress.yaml
apiVersion: apiIngressV1
kind: Ingress
metadata:
    name: api-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
    - host: api.20.74.98.1.nip.oi
      http:
        paths:
        - path: /foo
          backend:
            serviceName: service-api
            serviePort: 3000
